--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/react-select": "^3.0.21",
+    "@types/uuid": "^8.3.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "typescript": "~3.8.2"
+    "react-select": "^3.1.0",
+    "typescript": "~3.8.2",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
