--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,8 @@ jobs:
           
       - run: yarn install
       - run: yarn build
+        env:
+          CI: false
       - run: yarn test
+        env:
+          CI: false
